force-app/main/default/objects/Scholarship_Award__c/Scholarship_Award__c.object-meta.xml
<CustomObject>
    <label>Scholarship Award</label>
    <nameField>
        <displayFormat>SA-{00000000}</displayFormat>
        <label>Scholarship Award Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scholarship Awards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>