force-app/main/default/objects/Scholarship_Award__c/fields/AWARD_NOTE__c.field-meta.xml
<CustomField>
    <fullName>AWARD_NOTE__c</fullName>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>