force-app/main/default/objects/Scholarship_Award__c/fields/AWARD_NUM__c.field-meta.xml
<CustomField>
    <fullName>AWARD_NUM__c</fullName>
    <externalId>true</externalId>
    <label>Award Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>