force-app/main/default/objects/Scholarship_Award__c/fields/AWARD_SRC_DCMNT__c.field-meta.xml
<CustomField>
    <fullName>AWARD_SRC_DCMNT__c</fullName>
    <label>Document #</label>
    <type>TextArea</type>
</CustomField>