force-app/main/default/objects/Scholarship_Award__c/fields/City_State_Formula__c.field-meta.xml
<CustomField>
    <fullName>City_State_Formula__c</fullName>
    <formula>RCPNT_ID__r.SCHL_CITY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City/State</label>
    <type>Text</type>
</CustomField>