force-app/main/default/objects/Scholarship_Award__c/fields/Classification_Formula__c.field-meta.xml
<CustomField>
    <fullName>Classification_Formula__c</fullName>
    <formula>RCPNT_ID__r.Classification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification</label>
    <type>Text</type>
</CustomField>