force-app/main/default/objects/Scholarship_Award__c/fields/College_formula__c.field-meta.xml
<CustomField>
    <fullName>College_formula__c</fullName>
    <formula>RCPNT_ID__r.RCPNT_COLL__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>College</label>
    <type>Text</type>
</CustomField>