force-app/main/default/objects/Scholarship_Award__c/fields/Department_Formula__c.field-meta.xml
<CustomField>
    <fullName>Department_Formula__c</fullName>
    <formula>RCPNT_ID__r.RCPNT_DEPT_CD__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>