force-app/main/default/objects/Scholarship_Award__c/fields/FUND_ACCT__c.field-meta.xml
<CustomField>
    <fullName>FUND_ACCT__c</fullName>
    <label>Fund</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Scholarship Awards</relationshipLabel>
    <relationshipName>Scholarship_Awards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>