force-app/main/default/objects/Scholarship_Award__c/fields/RCPNT_ID__c.field-meta.xml
<CustomField>
    <fullName>RCPNT_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>Scholarship_Recipient__c</referenceTo>
    <relationshipLabel>Scholarship Awards</relationshipLabel>
    <relationshipName>Scholarship_Awards</relationshipName>
    <type>Lookup</type>
</CustomField>