force-app/main/default/objects/Scholarship_Award__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <formula>RCPNT_ID__r.RCPNT_ID__r.ucinn_ascendv2__Full_Name_Formula__c</formula>
    <label>Recipient Name</label>
    <type>Text</type>
</CustomField>