force-app/main/default/objects/Scholarship_Award__c/fields/SCHLRSHP_AMT_PAID__c.field-meta.xml
<CustomField>
    <fullName>SCHLRSHP_AMT_PAID__c</fullName>
    <label>Amount Paid</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>