force-app/main/default/objects/Scholarship_Award__c/fields/SCHLRSHP_NUM__c.field-meta.xml
<CustomField>
    <fullName>SCHLRSHP_NUM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scholarship</label>
    <referenceTo>Scholarship__c</referenceTo>
    <relationshipLabel>Scholarship Awards</relationshipLabel>
    <relationshipName>Scholarship_Awards</relationshipName>
    <type>Lookup</type>
</CustomField>