force-app/main/default/objects/Scholarship_Award__c/fields/SCHLRSHP_SEM_CCYY__c.field-meta.xml
<CustomField>
    <fullName>SCHLRSHP_SEM_CCYY__c</fullName>
    <label>Award Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>