force-app/main/default/objects/Scholarship_Award__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SCHLRSHP_SEM_CCYY__c</columns>
    <columns>FUND_ACCT__c</columns>
    <columns>RCPNT_ID__c</columns>
    <columns>SCHLRSHP_SEM_CD__c</columns>
    <columns>SCHLRSHP_NUM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>